--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,34 @@
     </string-array>
     <string name="title_activity_maps">Map</string>
 
+
+
+
+
+    ////////////////////
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="home">Home</string>
+    <string name="reservations">Reservations</string>
+    <string name="blackboard">Blackboard</string>
+    <string name="notifications">Notifications</string>
+    <string name="settings">Settings</string>
+    <string name="title_activity_blackboard">blackboard</string>
+    <string name="title_activity_schedule">schedule</string>
+    <string name="title_activity_reservations">reservations</string>
+    <string name="title_activity_notifications">notifications</string>
+    <string name="title_activity_settings">settings</string>
+    <string name="top_three_instructors">Top Three Instructors</string>
+    <string name="choose_date">Choose date</string>
+    <string name="schedule">Schedule</string>
+    <string name="date">date</string>
+    <string name="edit_spots">Edit spots</string>
+    <string name="select_spots">Select spots</string>
+    <string name="done">Done</string>
+////////////////
+
 </resources>
