--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     </string-array>
 
     <string-array name="specialty">
-        <item>Math</item>
+        <item>Music</item>
         <item>Piano</item>
         <item>Science</item>
         <item>Guitar</item>
@@ -41,9 +41,6 @@
     <string name="title_activity_maps">Map</string>
 
 
-
-
-
     ////////////////////
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -68,6 +65,6 @@
     <string name="edit_spots">Edit spots</string>
     <string name="select_spots">Select spots</string>
     <string name="done">Done</string>
-////////////////
+    ////////////////
 
 </resources>
