--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,8 @@
     <string name="action_settings">Settings</string>
     <string name="home">Home</string>
     <string name="reservations">Reservations</string>
+    <string name="signOut">Sign out</string>
+
     <string name="blackboard">Blackboard</string>
     <string name="notifications">Notifications</string>
     <string name="settings">Settings</string>
