--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="action_settings">Settings</string>
     <string name="home">Home</string>
     <string name="reservations">Reservations</string>
-    <string name="signOut">Sign out</string>
+    <string name="signout">Sign out</string>
 
     <string name="blackboard">Blackboard</string>
     <string name="notifications">Notifications</string>
