checks add,arabic,location in view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,15 +11,15 @@
     </string-array>
 
     <string-array name="specialty">
-        <item>Arabic</item>
-        <item>English</item>
-        <item>Math</item>
-        <item>Chemistry</item>
-        <item>Physics</item>
-        <item>Music</item>
-        <item>Dancing</item>
-        <item>Painting</item>
-        <item>Cooking</item>
+        <item>العربية</item>
+        <item>الانكليزية</item>
+        <item>الرياضيات</item>
+        <item>الكيمياء</item>
+        <item>الفيزياء</item>
+        <item>الموسيقى</item>
+        <item>الرقص</item>
+        <item>الرسم</item>
+        <item>الطبخ</item>
 
 
     </string-array>
