--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     </string-array>
 
     <string-array name="specialty">
+        <item>''</item>
         <item>العربية</item>
         <item>الانكليزية</item>
         <item>الرياضيات</item>
