--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,9 @@
     <string name="edit_spots">Edit spots</string>
     <string name="select_spots">Select spots</string>
     <string name="done">Done</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
     ////////////////
 
 </resources>
