--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,19 +49,19 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
-    <string name="home">Home</string>
-    <string name="reservations">Reservations</string>
+    <string name="action_settings">الإعدادات</string>
+    <string name="home">الرئيسية</string>
+    <string name="reservations">الدروس</string>
     <string name="signOut">Sign out</string>
 
-    <string name="blackboard">Blackboard</string>
-    <string name="notifications">Notifications</string>
-    <string name="settings">Settings</string>
-    <string name="title_activity_blackboard">blackboard</string>
-    <string name="title_activity_schedule">schedule</string>
-    <string name="title_activity_reservations">reservations</string>
-    <string name="title_activity_notifications">notifications</string>
-    <string name="title_activity_settings">settings</string>
+    <string name="blackboard">منصة الأسئلة</string>
+    <string name="notifications">الإشعارات</string>
+    <string name="settings">الإعدادت</string>
+    <string name="title_activity_blackboard">منصة الأسئلة</string>
+    <string name="title_activity_schedule">المواعيد المتاحة</string>
+    <string name="title_activity_reservations">الدروس</string>
+    <string name="title_activity_notifications">الإشعارات</string>
+    <string name="title_activity_settings">الإعدادات</string>
     <string name="top_three_instructors">Top Three Instructors</string>
     <string name="choose_date">Choose date</string>
     <string name="schedule">Schedule</string>
